use solution inspired by stackoverflow